# Smoke

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
app/: RenderToFile.cpp  RenderToFile.h  State.cpp  State.h
app/audio/: AudioPlayer.cpp  AudioPlayer.h  BeatHandler.cpp  BeatHandler.h  SoundWindow.cpp  SoundWindow.h
app/disp/: AudioWidget.cpp  AudioWidget.h  AudioWidgetBase.cpp  AudioWidgetBase.h  AutoMover.cpp  AutoMover.h  DispSettings.cpp  DispSettings.h  HistoryWidget.cpp  HistoryWidget.h  MainWindow.cpp  MainWindow.h  ManipulatorBase.h  MouseState.cpp  MouseState.h  RendererBase.cpp  RendererBase.h  SettingsWidget.cpp  SettingsWidget.h  ShaderBase.cpp  ShaderBase.h  SmokeEffect.cpp  SmokeEffect.h  SmokeRenderer.cpp  SmokeRenderer.h  SmokeShader.cpp  SmokeShader.h  SmokeWidget.cpp  SmokeWidget.h  SpectrumWidget.cpp  SpectrumWidget.h
app/disp/Shaders/: PlainFragmentShader.glsl  PlainVertexShader.glsl  SmokeFragmentShader.glsl  SmokeVertexShader.glsl  shaders.qrc
app/fluid/: CMakeLists.txt  Fluid.cu  Fluid.cuh  FluidSettings.cpp  FluidSettings.h  Matrix.cpp  Matrix.h
app/math/: Functions.cpp  Functions.h  Math.cpp  Math.h  Vector2F.cpp  Vector2F.h
app/prf/: Profile.h  ScopedTimer.cpp  ScopedTimer.h
app/thr/: ThreadPool.cpp  ThreadPool.h  ThreadSettings.cpp  ThreadSettings.h
app/type/: BufferBase.h  BufferTypes.h  CircularBuffer.h  Complex.h  LinearBuffer.h
